# substance-signals

./: .drone.yml  .gitignore  CMakeLists.txt  CMakePresets.json  Changelog  Makefile  README.md  SignalsConfig.cmake.in  check.sh  cmake-pre-build.sh  extra.sh  fix-deps.sh  gnu.mk  mac-manual-sysroot-build.sh  signals.sln  vcpkg-configuration.json  vcpkg.json
src/: CMakeLists.txt  version.cpp
src/apps/: CMakeLists.txt
src/apps/common/: safemain.cpp
src/apps/dashcastx/: CMakeLists.txt  config.hpp  dashcastx.cpp  dashcastx.vcxproj  dashcastx.vcxproj.filters  main.cpp  options.cpp  options.hpp  pipeliner.cpp  pipeliner.hpp  pipeliner_dashcastx.cpp  project.mk
src/apps/mcastdump/: CMakeLists.txt  main.cpp  project.mk
src/apps/monitor/: CMakeLists.txt  main.cpp  project.mk
src/apps/mp42tsx/: CMakeLists.txt  mp42tsx.cpp  mp42tsx.vcxproj  options.cpp  options.hpp  pipeliner.cpp  pipeliner.hpp  pipeliner_mp42ts.cpp  project.mk
src/apps/player/: CMakeLists.txt  config.hpp  pipeliner.cpp  pipeliner_player.cpp  pipeliner_player.hpp  player.cpp  player.vcxproj  project.mk
src/apps/ts2ip/: CMakeLists.txt  main.cpp  project.mk
src/lib_appcommon/: CMakeLists.txt  appcommon.vcxproj  options.cpp  options.hpp  safemain.cpp  timebomb.cpp  timebomb.hpp
src/lib_appcommon/unittests/: options.cpp
src/lib_ffpp/: ffpp.hpp
src/lib_gpacpp/: gpacpp.hpp
src/lib_media/: CMakeLists.txt  media.hpp  media.vcxproj  media.vcxproj.filters  project.mk
src/lib_media/common/: attributes.hpp  expand_vars.cpp  ffpp.hpp  file_puller.hpp  gpac.cpp  gpac.hpp  gpacpp.hpp  http_puller.cpp  http_sender.cpp  http_sender.hpp  iso8601.cpp  libav.cpp  libav.hpp  libav_hw.hpp  libav_init.cpp  metadata.hpp  metadata_file.hpp  mpeg_dash_parser.cpp  mpeg_dash_parser.hpp  pcm.hpp  picture.cpp  picture.hpp  picture_allocator.hpp  picture_types.hpp  pixel_format.hpp  resolution.hpp  sax_xml_parser.cpp  sax_xml_parser.hpp  subtitle.hpp  utc_start_time.hpp  xml.cpp  xml.hpp
src/lib_media/decode/: decoder.cpp  decoder.hpp  jpegturbo_decode.cpp  jpegturbo_decode.hpp  libav_decode.cpp  libav_decode.hpp
src/lib_media/demux/: dash_demux.cpp  dash_demux.hpp  gpac_demux_mp4_full.cpp  gpac_demux_mp4_full.hpp  gpac_demux_mp4_simple.cpp  gpac_demux_mp4_simple.hpp  libav_demux.cpp  libav_demux.hpp
src/lib_media/encode/: jpegturbo_encode.cpp  jpegturbo_encode.hpp  libav_encode.cpp  libav_encode.hpp
src/lib_media/in/: file.cpp  file.hpp  mpeg_dash_input.cpp  mpeg_dash_input.hpp  sound_generator.cpp  sound_generator.hpp  video_generator.cpp  video_generator.hpp
src/lib_media/mux/: gpac_mux_m2ts.cpp  gpac_mux_m2ts.hpp  gpac_mux_mp4.cpp  gpac_mux_mp4.hpp  gpac_mux_mp4_mss.cpp  gpac_mux_mp4_mss.hpp  libav_mux.cpp  libav_mux.hpp  mux_mp4_config.hpp
src/lib_media/render/: render.mk  render_common.hpp  sdl_audio.cpp  sdl_audio.hpp  sdl_common.cpp  sdl_video.cpp  sdl_video.hpp
src/lib_media/stream/: adaptive_streaming_common.cpp  adaptive_streaming_common.hpp  apple_hls.cpp  apple_hls.hpp  hls_muxer_libav.cpp  hls_muxer_libav.hpp  mpeg_dash.cpp  mpeg_dash.hpp  ms_hss.cpp  ms_hss.hpp
src/lib_media/transform/: audio_convert.cpp  audio_convert.hpp  audio_gap_filler.cpp  audio_gap_filler.hpp  avcc2annexb.cpp  avcc2annexb.hpp  libavfilter.cpp  libavfilter.hpp  logo_overlay.cpp  logo_overlay.hpp  rectifier.cpp  rectifier.hpp  restamp.cpp  restamp.hpp  teletext2ttml.cpp  teletext2ttml.hpp  telx.hpp  telx2ttml.cpp  telx2ttml.hpp  telx_structs.hpp  telx_tables.hpp  time_rectifier.cpp  time_rectifier.hpp  video_convert.cpp  video_convert.hpp
src/lib_media/unittests/: converter.cpp  decode.cpp  decoder.cpp  demux.cpp  demux_decoder.cpp  encoder.cpp  erasure.cpp  expand_vars.cpp  generator.cpp  http.cpp  libav_mux.cpp  libavfilter.cpp  logo_overlay.cpp  metadata.cpp  modules_common.hpp  mpeg_dash.cpp  mpeg_dash_input.cpp  ms_hss.cpp  mux.cpp  player.cpp  rectifier.cpp  render.cpp  simple.cpp  streamer.cpp  telx2ttml.cpp  timings.cpp  transcoder.cpp  video_convert.cpp
src/lib_media/utils/: comparator.cpp  comparator.hpp  recorder.cpp  recorder.hpp  regulator.hpp  regulator_mono.hpp  repeater.cpp  (+2 more)
src/lib_modules/: CMakeLists.txt  modules.hpp  modules.vcxproj  modules.vcxproj.filters  project.mk
src/lib_pipeline/: CMakeLists.txt  filter.cpp  filter.hpp  filter_input.hpp  graph.hpp  graph_builder.cpp  graph_builder.hpp  i_filter.hpp  pipeline.cpp  pipeline.hpp  pipeline.vcxproj  pipelined_input.hpp  pipelined_module.cpp  pipelined_module.hpp  stats.hpp
src/lib_signals/: CMakeLists.txt  connection.hpp  executor.hpp  executor_threadpool.hpp  helper.hpp  signal.hpp  signals.hpp  signals.vcxproj  signals.vcxproj.filters
src/lib_utils/: CMakeLists.txt  clock.cpp  clock.hpp  darwin.mk  default_clock.hpp  fifo.hpp  format.hpp  fraction.hpp  gnu.mk  i_scheduler.hpp  json.cpp  json.hpp  log.cpp  log.hpp  log_sink.hpp  mingw32.mk  os.cpp  os.hpp  os_darwin.cpp  os_gnu.cpp  os_mingw.cpp  profiler.cpp  profiler.hpp  project.mk  queue.hpp  queue_inspect.hpp  queue_lockfree.hpp  resolution.hpp  sax_xml_parser.cpp  sax_xml_parser.hpp  scheduler.cpp  scheduler.hpp  small_map.hpp  socket.hpp  socket_gnu.cpp  socket_mingw.cpp  string_tools.hpp  sysclock.cpp  sysclock.hpp  syslog.cpp  (+13 more)
src/plugins/: CMakeLists.txt  project.mk
src/tests/: CMakeLists.txt  modules.cpp  modules_clock.cpp  modules_common.hpp  modules_converter.cpp  modules_decode.cpp  modules_demux.cpp  modules_encoder.cpp  modules_erasure.cpp  modules_fifo.cpp  modules_generator.cpp  modules_metadata.cpp  modules_mux.cpp  modules_pipeline.cpp  modules_player.cpp  modules_rectifier.cpp  modules_render.cpp  modules_simple.cpp  modules_streamer.cpp  modules_timings.cpp  modules_transcoder.cpp  pipeline.cpp  pipeline_base.cpp  pipeline_common.hpp  pipeline_dynamic.cpp  pipeline_interrupt.cpp  pipeline_topology.cpp  project.mk  signals.cpp  signals_async.cpp  signals_module.cpp  signals_perf.cpp  signals_queue.cpp  signals_simple.cpp  signals_unit_result.cpp  test_modules.vcxproj  test_modules.vcxproj.filters  test_pipeline.vcxproj  test_pipeline.vcxproj.filters  test_signals.vcxproj  (+10 more)
(+270 files in other folders)
